# terminal-dict

./: .gitignore  LICENSE  ai_service.py  audio.py  config.py  config.toml  database.py  dictionary.db  dictionary.py  enrichment.py  history.py  main.py  practice.py  pyproject.toml  review.py  server.py  syllables.py  sync.py
dict_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: roadmap.md  schema.md  usage.md
src/: database.py
